deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
        - name: my-website
          image: ghcr.io/dcnick3/my-website
