deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: my-website
