deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-website-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/issuer: cf-origin-prod
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
spec:
  rules:
    - host: my-website.dcnick3.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-website
                port:
                  number: 80
  tls:
    - hosts:
        - my-website.dcnick3.me
      secretName: my-website-ingress-secret
